# classting-assignment

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  coverage.ini  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  run_mypy.sh
.envs/: local_django_env  local_env  test_env
.github/workflows/: ci-test.yaml
common/: asgi.py  decorators.py  exception_middleware.py  exceptions.py  settings.py  settings_test.py  urls.py  utils.py  wsgi.py
common/middlewares/: argument_missing_middleware.py
common/tests/units/: test_decorators.py  test_utils.py
db/mysql-init/: create-database.sql
docs/: APISpecs.md
schools/: models.py  urls.py  values.py  views.py
schools/adapters/repos/: django_school_repo.py  school_repo.py
schools/domain/: commands.py  entities.py  exceptions.py  interfaces.py  values.py
schools/migrations/: 0001_initial.py  0002_alter_schools_city_alter_schools_name.py  0002_rename_district_schools_district_name.py  0003_rename_district_name_schools_city.py  0004_alter_schools_unique_together.py  0005_schoolnews.py  0006_schoolnews_updated_at.py  0007_alter_schoolnews_school.py
schools/tests/: factories.py
schools/tests/integrations/: test_models.py
schools/tests/integrations/usecases/: school_usecase.py  test_school_usecase.py
schools/usecases/: school_usecase.py
subscriptions/: models.py  urls.py  views.py
subscriptions/adapters/repos/: django_subscription_repo.py  subscriptions_repo.py
subscriptions/domain/: entities.py  exceptions.py  interfaces.py
subscriptions/migrations/: 0001_initial.py
subscriptions/tests/: factories.py
subscriptions/tests/integrations/: test_models.py
subscriptions/usecases/: subscription_usecaes.py  subscription_usecases.py
users/: models.py  urls.py  utils.py  views.py
users/adapter/income/web/: sign_in_view.py  sign_up_view.py
users/adapters/repos/: django_user_repo.py
users/app/usecase/: sign_in_usecase.py  sign_up_usecase.py
users/domain/: entities.py  exceptions.py  interfaces.py  user_entity.py  values.py
users/migrations/: 0001_initial.py  0002_remove_users_name.py
users/tests/: conftest.py  factories.py  test_utils.py
users/tests/integration/: test_models.py
users/tests/integrations/: test_models.py
users/usecases/: user_usecase.py
(+17 files in other folders)
